fix font not loading on mobile (#112)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Geist";
+  src:
+    local("Geist"),
+    url("./fonts/GeistVariableVF.ttf") format("truetype");
+}
+
 * {
   scroll-behavior: smooth;
 }
